--- a/inundacion_historia.html
+++ b/inundacion_historia.html
@@ -82,11 +82,12 @@
         </div>
 
         <div id="type_control" class="mapControls">
+          
           <div id="radio_container" style="font-size: 3vh;">
             <div class="switch-field">
-                <input type="radio" id="btnFlood" name="type" value="CBE" onchange="updateMap('flood_2015')" checked >
+                <input type="radio" id="btnFlood" name="type" value="flood_2015" onchange="updateMap('flood_2015')" checked >
                 <label for="btnFlood">Area inundada 2015</label>
-                <input type="radio" id="btnLevels" name="type" value="I" onchange="updateMap('flood_levels')"  />
+                <input type="radio" id="btnLevels" name="type" value="flood_levels" onchange="updateMap('flood_levels')"  />
                 <label for="btnLevels">Simulaciones de inundada</label>
             </div>   
           </div>
