--- a/hidricoPEM.html
+++ b/hidricoPEM.html
@@ -65,17 +65,25 @@
 
     <div class="w3-twothird" id="maps">
 
-      <div id="mapTitle" >
-        <center>
-          <h2  id="titulo">Loading...</h2>
-          <a id="changeButton" onclick="switchMode('Hidrico')" style="font-style: italic;"></a>
-        </center>
-      </div>
+      
       
       <div style="clear: both;">
 
         <!-- Map 1 --> 
         <div id="map1" class="map">
+          <div id="mapTitle" >
+            <center>
+              <h2  id="titulo">Loading...</h2>
+              <div id="radio_container" >
+                <div class="switch-field">
+                    <input type="radio" id="btnRiesgos" name="mode" value="Hidrico" onchange="switchMode('Hidrico')" checked >
+                    <label for="btnRiesgos">Servicios hídricos</label>
+                    <input type="radio" id="btnUso" name="mode" value="LU" onchange="switchMode('LU')"  />
+                    <label for="btnUso">Uso del suelo</label>
+                </div>      
+            </div>
+            </center>
+          </div>
           <div id="map1_text">
             <h1 style="margin: 0;">2019</h1>
           </div>
@@ -88,8 +96,7 @@
           <div id="map2_text">
             <h1 style="margin: 0;">2035</h1>
           </div>
-          <div class="mapControls">
-            Escenarios Futoro
+          <div class="mapControls_scenario">
             <div w3-include-html="html/pickEscenario_new.html"></div>
           </div>
           <!-- Legend -->
