--- a/html/navbar.html
+++ b/html/navbar.html
@@ -74,21 +74,10 @@
     </div>
   
 
-
     <div class="dropdown bg-black pa3">
-      Más recursos
-      <div class="dropdown-content bg-black white pa3">
-       
-      <!--<a href="MAP.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
-      Region tri-nacional MAP </a>-->
-      
-      <a href="amazonia.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
-      Estudio de CI </a>
+      <a href="..\masRecursos.html" class="link white  bg-black pb2 db navbarLink">
+      Más recursos </a>
 
-      <a href="https://www.wwf.ch/sites/default/files/doc-2017-06/2015-report-living-amazon-ecosystem-services.pdf" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink" target="_blank">
-      Estudio de WWF</a>
-
-      </div>
     </div>
 
 
