--- a/masRecursos.html
+++ b/masRecursos.html
@@ -86,7 +86,7 @@
     <div class="w3-half" style="padding-left: 40px;">
       <h3 style="color: #7fc46f;">Mapping Natural Capital in Amazonia</h3>
       <h5>
-        Este es un análisis un análisis, realizado por Conservación Internacional (en inglés) mapeando Natural Capital en todo en basin amazónico. Análisis dirigido por Rachel Neugarten
+        Este es en análisis un análisis, realizado por Conservación Internacional (en inglés) mapeando Natural Capital en todo en basin amazónico. Análisis dirigido por Rachel Neugarten
       </h5>
       
     </div>
