--- a/html/navbar.html
+++ b/html/navbar.html
@@ -75,7 +75,7 @@
   
 
     <div class="dropdown bg-black pa3">
-      <a href="..\masRecursos.html" class="link white  bg-black pb2 db navbarLink">
+      <a href="masRecursos.html" class="link white  bg-black pb2 db navbarLink">
       Más recursos </a>
 
     </div>
