--- a/saludPEM.html
+++ b/saludPEM.html
@@ -143,7 +143,7 @@
         </div>
 
         <div id="Método" class="tabcontent">
-          <div w3-include-html="html/tab_method.html"></div>
+          <div w3-include-html="html/tab_methodE.html"></div>
         </div>
       </div>
 
