--- a/saludTAH.html
+++ b/saludTAH.html
@@ -96,7 +96,7 @@
             <h1 style="margin: 0;">2035</h1>
           </div>
           <div class="mapControls_scenario">
-            <div w3-include-html="html/pickEscenario_new.html"></div>
+            <div w3-include-html="html/pickEscenario_TAH.html"></div>
           </div>
           <!-- Legend -->
           <div id="map2_legend" class="map_legend"style="bottom: 1vh;">
@@ -139,7 +139,7 @@
         </div>
         
         <div id="Escenarios" class="tabcontent">
-          <div w3-include-html="html\tab_escenarios_narrativa_PEM.html"></div>
+          <div w3-include-html="html\tab_escenarios_narrativa_TAH.html"></div>
         </div>
 
         <div id="Método" class="tabcontent">
@@ -162,7 +162,7 @@
     document.getElementById("defaultOpen").click();
   </script>
   <script src="js/overlay.js"></script>
-  <script src="js/chartPEM_Salud.js"></script>
+  <script src="js/chartTAH_Salud.js"></script>
 
 
   <script src="lib/js/L.Map.Sync.js"></script>
@@ -171,7 +171,7 @@
   <script src='js/mapUtils.js'> </script>
 
   <!-- w/o Pointer -->
-  <script src="js/mapsPEM_Salud.js"></script>
+  <script src="js/mapsTAH_Salud.js"></script>
 <!-- w/ pointer 
   <script src="js/pointer/helperPointer.js"></script>
   <script src="js/mapsPEM_pointer.js"></script>
