flag that it is not natcap data

--- a/inundacion_historia.html
+++ b/inundacion_historia.html
@@ -99,7 +99,7 @@
 
     <div class="w3-third" style="padding: 0 5px; color: white; ">
       <center>
-        <h1 id="header_historia"> Inundación de 2015: Vulnerabilidad de los asentamientos humanos de la cuenca alta trinacional del Río Acre.</h1>
+        <h1 id="header_historia"> Inundación de 2015: Vulnerabilidad de los asentamientos humanos de la cuenca alta trinacional del Río Acre. - Analysis de Herencia</h1>
         <a href="static/pdfs/reporte_inundacion_Herencia.pdf">PDF Reporte</a>
       </center>
       <center>
