fixes with text and data

--- a/hidricoPEM.html
+++ b/hidricoPEM.html
@@ -122,7 +122,7 @@
       <div id="tabsPanel">
         <div class="tab">
           <button id="defaultOpen" class="tablinks" onclick="openTab(event, 'DiagH')">
-            Diagnóstico hídrico
+            Diagnóstico 
           </button>
           <button class="tablinks" onclick="openTab(event, 'Escenarios')">Escenarios
           </button>
