--- a/inundacion_historia.html
+++ b/inundacion_historia.html
@@ -99,8 +99,10 @@
 
     <div class="w3-third" style="padding: 0 5px; color: white; ">
       <center>
-        <h1 id="header_historia"> Inundación de 2015: Vulnerabilidad de los asentamientos humanos de la cuenca alta trinacional del Río Acre. - Analysis de Herencia</h1>
-        <a href="static/pdfs/reporte_inundacion_Herencia.pdf">PDF Reporte</a>
+        <h1 id="header_historia"> Inundación de 2015 </h1>
+        <h2 class="sub-header_historia">Vulnerabilidad de los asentamientos humanos de la cuenca alta trinacional del Río Acre. </h2>
+        <h2 class="sub-header_historia" style="font-size: 12px;"><i>- Analysis de Herencia</i><a href="static/pdfs/reporte_inundacion_Herencia.pdf" target="_blank"> PDF Reporte</a></h2>
+        
       </center>
       <center>
         <img src='static/images/flood.jpg' style='max-height:30vh; padding: 0 5%; margin-top: 4px;' alt='Leyenda' />
