--- a/html/tab_diagnosticoFlood.html
+++ b/html/tab_diagnosticoFlood.html
@@ -1,12 +1,17 @@
-<strong>TODO</strong>
-<h5>Diagnóstico de riesgos para los servicios inundaciones</h5>
-<p>Considerando diferentes maneras en las cuales el desarrollo puede crecer en la región (<a onclick="openTab(event, 'Escenarios')">scenarios</a>), el riesgo hidrológico se evalúa superponiendo áreas inundadas con una probabilidad diferente y la distribución diferente del uso de la tierra para los diferentes escenarios. Las áreas inundadas están delineadas para inundaciones con períodos de retorno de 10, 50 y 100 años. Finalmente, el riesgo de daños por inundación está controlado por el lugar donde ocurre el desarrollo humano dentro de las áreas que podrían inundarse.</p>
-	
 
-<strong> El índice de servicios inundaciones incluye:</strong> 
+<h5>Diagnóstico de riesgos para los servicios inundaciones</h5>
+<p>Considerando diferentes maneras o <a onclick="openTab(event, 'Escenarios')">escenarios </a> en las cuales el desarrollo puede crecer en la región, el riesgo hidrológico se evalúa por superponer áreas inundadas con varias probabilidades y distribuciones de los usos del suelo para los diferentes escenarios. Las áreas inundadas están delineadas por períodos de retorno de 10, 50 y 100 años. Finalmente, el riesgo de daños por inundación está controlado por el lugar donde el desarrollo humano ocurre dentro de las áreas de inundación.</p>
+
+<strong>El índice del riesgo de inundaciones incluye:</strong> 
 <ul><li> Infraestructura y asentamientos en riesgo</li>
 <li> Agricultura en riesgo </li>
-<li> Bosques innumerables y áreas naturales*</li></ul>
+<li> Bosques y áreas naturales* inundados</li></ul>
 
 <p>Reportado en términos de km2 innundados. Los datos se pueden mostrar para cada uno de los períodos de retorno de 10, 50 y 100 años y para los diferentes escenarios.</p>
-<p>* Tenga en cuenta que las áreas naturales pueden beneficiarse de las inundaciones, y las inundaciones regulares pueden contribuir a su salud y aumentar los servicios del ecosistema.</p>
+<p>*Tenga en cuenta que es posible que las áreas naturales podrían beneficiarse de las inundaciones.  Si las inundaciones aumentan a su salud de las áreas naturales, igual aumentan a los servicios ecosistémicos que proporcionan.
+</p>
+
+
+
+
+
