--- a/saludTAH.html
+++ b/saludTAH.html
@@ -124,7 +124,7 @@
       <div id="tabsPanel">
         <div class="tab">
           <button id="defaultOpen" class="tablinks" onclick="openTab(event, 'DiagE')">
-            Diagnóstico epidemiológico
+            Diagnóstico 
           </button>
           <button class="tablinks" onclick="openTab(event, 'Escenarios')">Escenarios
           </button>
