New people and image

--- a/about.html
+++ b/about.html
@@ -114,7 +114,7 @@
 	<div class="w3-col s2 w3-center">
 		<img src="static/photos/av.jpg" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
 		<h5>Adrian Vogl</h5>
-		<div class="center w3-text-grey"><i>Líder del proyecto</i></div>
+		<div class="center w3-text-grey"><i> Líder del proyecto, Científica, especialista en diag. hidrico</i></div>
 	</div>
 
 	<div class="w3-col s2 w3-center">
@@ -126,8 +126,46 @@
 	<div class="w3-col s2 w3-center">
 		<img src="static/photos/cw.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
 		<h5>Charlotte Weil</h5>
-		<div class="center w3-text-grey"><i>Científica de datos</i></div>
+		<div class="center w3-text-grey"><i>Científica de datos, desarrolladora del visualizador</i></div>
 	</div>
+
+	<div class="w3-col s2 w3-center">
+		<img src="static/photos/rs.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
+		<h5>Rafaël Schmitt</h5>
+		<div class="center w3-text-grey"><i>Científico, especialista en inundaciones</i></div>
+	</div>
+
+	<div class="w3-col s2 w3-center">
+		<img src="static/photos/ca.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
+		<h5>Christopher Anderson</h5>
+		<div class="center w3-text-grey"><i>Científico, especialista en salud</i></div>
+	</div>
+
+	<div class="w3-col s2 w3-center">
+		<img src="static/photos/mk.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
+		<h5>Morgan Kain</h5>
+		<div class="center w3-text-grey"><i>Científico, especialista en salud</i></div>
+	</div>
+
+	<div class="w3-col s2 w3-center">
+		<img src="static/photos/lm.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
+		<h5>Lisa Mandle</h5>
+		<div class="center w3-text-grey"><i>Científica, especialista en salud</i></div>
+	</div>
+
+	<div class="w3-col s2 w3-center">
+		<img src="static/photos/af.jpg" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
+		<h5>Anna Fredriksson Häägg</h5>
+		<div class="center w3-text-grey"><i>Desarrolladora del visualizador</i></div>
+	</div>
+
+	<div class="w3-col s2 w3-center">
+		<img src="static/photos/sm.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
+		<h5>Sydney Moss</h5>
+		<div class="center w3-text-grey"><i>Asistente de Investigación</i></div>
+	</div>
+
+
 
 	<div class="w3-col s2 w3-center">
 		<img src="static/photos/lf.jpg" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
@@ -144,19 +182,15 @@
 	<div class="w3-col s2 w3-center">
 		<img src="static/photos/jc.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
 		<h5>Jorge Caballero</h5>
-		<div class="center w3-text-grey"><i>Cincia</i></div>
+		<div class="center w3-text-grey"><i>Cincia, Analista SIG</i></div>
 	</div>
 
 	<div class="w3-col s2 w3-center">
 		<img src="static/photos/mp.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
 		<h5>Martin Pillaca</h5>
-		<div class="center w3-text-grey"><i>Cincia</i></div>
+		<div class="center w3-text-grey"><i>Cincia, Analista SIG</i></div>
 	</div>
 
-	<div class="w3-quarter center w3-text-grey">
-		<br>
-		<p>y Rafaël Schmitt, Christopher Anderson...</p>
-	</div>
 
 	</div>
 
