new people images

--- a/about.html
+++ b/about.html
@@ -136,19 +136,21 @@
 	</div>
 
 	<div class="w3-col s2 w3-center">
-		<img src="static/photos/ca.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
+		<img src="static/photos/jd.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
 		<h5>Christopher Anderson</h5>
 		<div class="center w3-text-grey"><i>Científico, especialista en salud</i></div>
 	</div>
 
 	<div class="w3-col s2 w3-center">
-		<img src="static/photos/mk.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
+		<img src="static/photos/jd.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
 		<h5>Morgan Kain</h5>
 		<div class="center w3-text-grey"><i>Científico, especialista en salud</i></div>
 	</div>
 
+	<div style="clear: both; height: 1vh; "></div>
+
 	<div class="w3-col s2 w3-center">
-		<img src="static/photos/lm.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
+		<img src="static/photos/lm.jpg" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
 		<h5>Lisa Mandle</h5>
 		<div class="center w3-text-grey"><i>Científica, especialista en salud</i></div>
 	</div>
@@ -160,12 +162,12 @@
 	</div>
 
 	<div class="w3-col s2 w3-center">
-		<img src="static/photos/sm.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
+		<img src="static/photos/jd.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
 		<h5>Sydney Moss</h5>
 		<div class="center w3-text-grey"><i>Asistente de Investigación</i></div>
 	</div>
 
-
+	<div style="clear: both; height: 1vh; "></div>
 
 	<div class="w3-col s2 w3-center">
 		<img src="static/photos/lf.jpg" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
