--- a/floodPEM.html
+++ b/floodPEM.html
@@ -152,11 +152,12 @@
 
      <br>
       <center><h6 id="chart_header" style='margin-top: 0px;'> Área expuesta a inundaciones de 50 años</h6></center>
-      <div id="controlyr">
+     
+      <div id="chartPEM_flood" class="chart" ></div>
+      <div id="controlyr" style="text-align: center;">
         Retorno de inundaciones
         <div  w3-include-html="html/pickYear.html"></div>
       </div>
-      <div id="chartPEM_flood" class="chart" ></div>
       
     </div>
 
