--- a/html/navbar.html
+++ b/html/navbar.html
@@ -81,7 +81,7 @@
     </div>
 
 
-    <a href="#" onclick="openNav();" class="link white hover-bg-dark-gray fr pa3 navbarLink">
+    <a href="#" onclick="openNav();" class="link white hover-bg-dark-gray fr pa3 navbarLink" style="font-size: 1.2vw;">
       ⓘ PRO-Agua
     </a>
 
