--- a/floodTAH.html
+++ b/floodTAH.html
@@ -154,11 +154,12 @@
 
      <br>
       <center><h6 id="chart_header" style='margin-top: 0px;'> Área expuesta a inundaciones de 50 años</h6></center>
-      <div id="controlyr">
+     
+      <div id="chartTAH_flood" class="chart" ></div>
+      <div id="controlyr" style="text-align: center;">
         Retorno de inundaciones
         <div  w3-include-html="html/pickYear.html"></div>
       </div>
-      <div id="chartTAH_flood" class="chart" ></div>
     </div>
 
   </body>
