regional maps for flood

--- a/floodPEM.html
+++ b/floodPEM.html
@@ -138,7 +138,7 @@
 
         <!-- Tab contents -->
         <div id="DiagH" class="tabcontent">
-          <div w3-include-html="html/tab_diagnosticoFlood.html"></div>
+          <div w3-include-html="html/tab_diagnosticoF_PEM.html"></div>
         </div>
         
         <div id="Escenarios" class="tabcontent">
@@ -161,6 +161,22 @@
       
     </div>
 
+
+
+    <script>
+      // Soecial function to show and remove big region image
+      function closeBigImg(){
+        document.getElementById("cover_all_img").style.display = "none";
+      }
+      function showBigImg(){
+        document.getElementById("cover_all_img").style.display = "block";
+      }
+    </script>
+    <div id="cover_all_img">
+      <a href="javascript:void(0)" style="    color: white; font-size: 37px; text-align: right; float: right; padding-right: 30px;" onclick="closeBigImg()">×</a>
+      <img id="big_img" src="../static/images/regional_flood_PEM.png"  alt="Regional flood"/>
+    </div>
+
   </body>
 
   <script src="js/pointer/canvasLayer.js"></script>
@@ -180,7 +196,6 @@
   <script src="lib/js/shp.js"></script>
   <script src='js/mapUtils.js'> </script>
 
-  <!-- w/o Pointer -->
   <script src="js/mapsPEM_flood.js"></script>
 
 <!-- w/ pointer 
