--- a/floodPEM.html
+++ b/floodPEM.html
@@ -174,7 +174,8 @@
     </script>
     <div id="cover_all_img">
       <a href="javascript:void(0)" style="    color: white; font-size: 37px; text-align: right; float: right; padding-right: 30px;" onclick="closeBigImg()">×</a>
-      <img id="big_img" src="../static/images/regional_flood_PEM.png"  alt="Regional flood"/>
+      <img id="big_img" src="static/images/regional_flood_PEM.png"  alt="Regional flood"/>
+      <center><p style="color:white;">Los datos regionales para todos los retornos de inundaciones se pueden encontrar <a href="https://drive.google.com/drive/folders/1ihpVgEbDdkeYQVzDgsUGWTXX1SRQb8EX" target="_blank">aquí</a></p></center>
     </div>
 
   </body>
