--- a/futuroResultados.html
+++ b/futuroResultados.html
@@ -66,9 +66,9 @@
       <h3 style="color: #7fc46f; margin-bottom: 0;">Diagnóstico epidemiológico</h3>
       <ul>
         <li><a href="https://drive.google.com/drive/folders/1P9mhnxmaSoyf6qC5ADS6lfwCrhRqxXZI" target="_blank">
-          Raster - Riesgo Region de Puerto Maldonado </a></li>
+          Raster - Riesgo Región de Puerto Maldonado </a></li>
         <li><a href="https://drive.google.com/drive/folders/1P9mhnxmaSoyf6qC5ADS6lfwCrhRqxXZI" target="_blank">
-          Raster - Riesgo Region de Tahuamanu-Cobija </a></li>
+          Raster - Riesgo Región de Tahuamanu-Cobija </a></li>
 
       </ul>
     </div>
@@ -78,9 +78,9 @@
       <h3 style="color: #7fc46f; margin-bottom: 0;">Diagnóstico de inundaciones</h3>
       <ul>
         <li><a href="https://drive.google.com/drive/folders/1SkYkmvPDVsdGfxYSlhR8arevhe_r5Y5F" target="_blank">
-          Shapefile - Riesgo Region de Puerto Maldonado </a></li>
+          Shapefile - Riesgo Región de Puerto Maldonado </a></li>
         <li><a href="https://drive.google.com/drive/folders/1xtAszVo-ix9wQSoGnCSNSTCguIBbSR6U" target="_blank">
-          Shapefile - Riesgo Region de Tahuamanu-Cobija </a></li>
+          Shapefile - Riesgo Región de Tahuamanu-Cobija </a></li>
         <li><a href="https://drive.google.com/drive/folders/1ihpVgEbDdkeYQVzDgsUGWTXX1SRQb8EX" target="_blank">
           Shapefile - Datos regionales completos </a></li>  
 
@@ -102,9 +102,9 @@
       <h3 style="color: #7fc46f; margin-bottom: 0;">Uso del suelo</h3>
       <ul>
         <li><a href="https://drive.google.com/drive/folders/1Ap2qKGFXgzPlFF4ttv1rwYySqszts-6H" target="_blank">
-          Raster - Escenario futuro Region de Puerto Maldonado</a></li>
+          Raster - Escenario futuro Región de Puerto Maldonado</a></li>
         <li><a href="https://drive.google.com/drive/folders/1Ap2qKGFXgzPlFF4ttv1rwYySqszts-6H" target="_blank">
-            Raster - Escenario futuro Region de Tahuamanu-Cobija</a></li>
+            Raster - Escenario futuro Región de Tahuamanu-Cobija</a></li>
 
         <li><a href="https://drive.google.com/drive/folders/1ncth97ORyd-lEOhRfMeBwIgYXL4iDlpQ" target="_blank"> Raster - 2019 </a></li>
       </ul>
