--- a/html/navbar.html
+++ b/html/navbar.html
@@ -13,11 +13,11 @@
       Diagnóstico hídrico
       <div class="dropdown-content bg-black white pa3">    
       <a href="hidricoPEM.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
-        Region de Puerto Maldonado 
+        Región de Puerto Maldonado 
       </a>
       <!-- Below: Will be hidricoTAH.html --> 
       <a href="futuroResultados.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
-        Region de Tahuamanu-Cobija 
+        Región de Tahuamanu-Cobija 
       </a>
       <a href="futuroResultados.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
         Descargar Resultados 
@@ -29,11 +29,11 @@
       Diagnóstico epidemiológico
       <div class="dropdown-content bg-black white pa3">    
       <a href="saludPEM.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
-        Region de Puerto Maldonado 
+        Región de Puerto Maldonado 
       </a>
       <!-- Below: Will be saludTAH.html --> 
       <a href="saludTAH.html"  class="link white hover-bg-dark-gray bg-black pb2 db navbarLink"> 
-        Region de Tahuamanu-Cobija 
+        Región de Tahuamanu-Cobija 
       </a>
       <a href="futuroResultados.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
         Descargar Resultados 
