--- a/html/tab_escenarios.html
+++ b/html/tab_escenarios.html
@@ -8,7 +8,7 @@
 	<img src="static/images/desarollando_escenarios.JPG" alt="Img"/>
 
 <p>
-En la planificación del territorio, es importante examinar cómo las acciones antrópicas podrían desarrollarse espacialmente. Estos son los escenarios y representan panoramas sobre posibles futuros eventos que ayudan a evaluar los servicios ecosistémicos y permiten tomar decisiones más sostenibles incorporarando a los servicios de los ecosistemas en las políticas públicas de Ordenamiento Territorial.</p>
+En la planificación del territorio, es importante examinar cómo las acciones antrópicas podrían desarrollarse espacialmente. Estos son los escenarios y representan panoramas sobre posibles futuros eventos que ayudan a evaluar los servicios ecosistémicos y permiten tomar decisiones más sostenibles incorporando a los servicios de los ecosistemas en las políticas públicas de Ordenamiento Territorial.</p>
 
 
 <img src="static/images/desarollando_escenarios1.JPG"  alt="Img"/>
