--- a/html/tab_servicios.html
+++ b/html/tab_servicios.html
@@ -3,7 +3,7 @@
 -->
 
 <h5>Calidad de Agua</h5>
-<p>Retención de Sedimentos: La vegetación retiene el suelo, evitando que  los sedimentos sean depositados en el rio y disminuyan la calidad del agua. El mapeo de sedimentos a los drenajes,  es de particular interés para el manejo de represas y embalses, plantas de tratamiento, costos de su potabilización, evita los altos costos en operación y mantenimiento asociados al dragado.
+<p>Retención de Sedimentos: La vegetación retiene el suelo, evitando que  los sedimentos sean depositados en el río y disminuyan la calidad del agua. El mapeo de sedimentos a los drenajes,  es de particular interés para el manejo de represas y embalses, plantas de tratamiento, costos de su potabilización, evita los altos costos en operación y mantenimiento asociados al dragado.
 </p><p> Descargar resultados: 
 	Mapas de exportación de sedimentos: <a href="static/pdfs/PANEL_PEM_SDR.pdf" download>PEM</a>, <a href="static/pdfs/PANEL_TAH_SDR.pdf" download>TAH</a>. <!--<a href="https://drive.google.com/open?id=1z9K61p_NHR9eS_Eiryw52xgRW4Y-Uy5I" target="_blank"> Resultados crudos de InVEST SDR (rasters)</a>-->.
 </p>
