--- a/html/tab_servicios_Pampa.html
+++ b/html/tab_servicios_Pampa.html
@@ -3,7 +3,7 @@
  -->
 
 <h5>Calidad de Agua</h5>
-<p>Retención de Sedimentos: La vegetación retiene el suelo, evitando que  los sedimentos sean depositados en el rio y disminuyan la calidad del agua. El mapeo de sedimentos a los drenajes,  es de particular interés para el manejo de represas y embalses, plantas de tratamiento, costos de su potabilización, evita los altos costos en operación y mantenimiento asociados al dragado.
+<p>Retención de Sedimentos: La vegetación retiene el suelo, evitando que  los sedimentos sean depositados en el río y disminuyan la calidad del agua. El mapeo de sedimentos a los drenajes,  es de particular interés para el manejo de represas y embalses, plantas de tratamiento, costos de su potabilización, evita los altos costos en operación y mantenimiento asociados al dragado.
 </p><p> Descargar resultados: 
 	<a href="static/pdfs/Pampa/SDR_05 y 20 AÑOS_PAMPA.pdf" download>Mapas de exportación de sedimentos</a>.
 </p>
