--- a/html/tab_escenarios_narrativa_PEM.html
+++ b/html/tab_escenarios_narrativa_PEM.html
@@ -1,8 +1,8 @@
 <h5> Narrativas por los futuros de PEM, 2035</h5>
 
 <strong>Escenario Sostenible</strong>
-<p>En un escenario sostenible se plantea que las deforestaciones cercanas a vías de acceso se conviertan en sistemas productivos como agricultura intensiva, agroforestería y sistemas silvopastoriles, fomentando el cuidado de los bosques y el medio ambiente.</p>
-<p>Las actividades ecoturísticas se verían en incremento, generando fuentes de empleo a la población siendo esta una alternativa sostenible para generar desarrollo en la región y dejar de lado las actividades extractivas de materia prima que generan ilegalidad y conflictos sociales.</p>
+<p>En un escenario sostenible se plantea que la deforestación cercana a las vías de acceso se convierta en sistemas productivos como agricultura intensiva, agroforestería y sistemas silvopastoriles, fomentando el cuidado de los bosques y el medio ambiente.</p>
+<p>Las actividades ecoturísticas se verían incrementadas, generando fuentes de empleo para la población siendo esta una alternativa sostenible para generar desarrollo en la región y dejar de lado las actividades extractivas de materia prima que generan ilegalidad y conflictos sociales.</p>
 
 
 <strong>Escenario Eco-Turismo</strong>
@@ -11,6 +11,6 @@
 Debido a la mala gestión sobre expansión urbana que manejan las autoridades competentes se observa un incremento en las invasiones y conflictos por predios urbanos.</p>
 
 <strong>Escenario Peor</strong>
-<p>Las autoridades competentes dejaran de lado los conflictos en la región ocasionando que las actividades como la minería y la agricultura de monocultivos que afectan a los bosques se vean en incremento y descontrol ,generando conflictos sociales y ambientales, como el incremento de actividades mineras cercanas a vías de acceso secundarias.</p>
+<p>Las autoridades competentes dejarán de lado los conflictos en la región ocasionando que las actividades como la minería y la agricultura de monocultivos que afectan a los bosques se vean en incremento y descontrol ,generando conflictos sociales y ambientales, como el incremento de actividades mineras cercanas a vías de acceso secundarias.</p>
 
-<p>El abandono de las autoridades ocasionara que la expansión urbana cercana a la interoceánica siga en incremento sin respetar las fajas marginales y el debido ordenamiento territorial.</p>
+<p>El abandono de las autoridades ocasionará que la expansión urbana cercana a la interoceánica siga en incremento sin respetar las fajas marginales y el debido ordenamiento territorial.</p>
