--- a/inundacion_historia.html
+++ b/inundacion_historia.html
@@ -105,7 +105,7 @@
         <img src='static/images/flood.jpg' style='max-height:30vh; padding: 0 5%; margin-top: 4px;' alt='Leyenda' />
         <h3 class="map_title">22 de febrero de 2015, Brasiléia y Cobija bajo agua. Fuente: Gleilson Miranda/Secom Acre 2015.</h3>
       </center>
-       <p id ="mapText"> Cobija, capital del Departamento Pando, Bolivia está ubicado en la margen derecha del Rio Acre, 
+       <p id ="mapText"> Cobija, capital del Departamento Pando, Bolivia está ubicado en la margen derecha del Río Acre, 
          limitando con los municipios brasileños de Epitaciolândia y Brasiléia.  La ciudad cuenta con una densidad actual 
          de 166 habitantes por km².Otro tanto sucedió en las ciudades de Brasiléia y Epitaciolândia, Acre, Brasil,
           donde los niveles de inundación superaron los 13 m como dan cuenta diversas fuentes informativas. (El Comercio,
