--- a/html/tab_method_Flood.html
+++ b/html/tab_method_Flood.html
@@ -2,20 +2,19 @@
 <p>Los mapas de inundaciones se derivan de un análisis de datos de observaciones históricas de los niveles de 
     agua en la cuenca de Acre y Purús en la zona de estudio y adyacentes a ella para 19 estaciones operadas por
      la ANA (Agencia Nacional de Agua) del Brasil y los datos están a disposición del público desde su 
-     <a href="http://www.snirh.gov.br/hidroweb" target="_blank"> Portal HidroWeb</a> y de un modelo de elevación digital derivado de satélites.
-      Derivamos áreas inundadas por períodos de retorno de 10, 50, 100 años. Cuanto mayor es el período de retorno,
-       mayor es el riesgo de inundación. El área inundada se deriva de la siguiente manera. Utilizamos los niveles de agua 
-       observados en cada estación para determinar la probabilidad de que se supere un cierto nivel de agua.
-        Luego interpolamos estos niveles de agua para todos los ríos en la zona. Por lo tanto, sabíamos que tan
-         alta puede ser el nivel del agua para inundaciones con diferentes períodos de retorno en todas las partes
-          de la cuenca Acre y Purus. Luego, delineamos el área de la llanura de inundación para cada período de retorno
-           del modelo de elevación digital. Para la cuenca Madre de Dios, no hay datos disponibles. Por lo tanto, utilizamos
-            ecuaciones derivadas de la cuenca Acre y Purus para predecir los niveles de inundaciones en Madre de Dios.
-             Los resultados de estos análisis son áreas inundadas con diferentes períodos de retorno en cada cuenca fluvial. 
-             Para el análisis de exposición, superpusimos las áreas inundadas con los datos de uso del suelo para los diferentes 
-             escenarios. La exposición a la inundaciones, por lo tanto, una función de la probabilidad de peligro 
-             (es decir, los períodos de retorno de la inundación) y la exposición, es decir, dónde se encuentran los edificios, 
-             las carreteras y la agricultura.</p>
+     <a href="http://www.snirh.gov.br/hidroweb" target="_blank"> Portal HidroWeb</a> y de un modelo de elevación 
+     digital derivado de información satelital. Derivamos áreas inundadas por períodos de retorno de 10, 50, 100 años. 
+     Cuanto mayor es el período de retorno, mayor es el riesgo de inundación. El área inundada se deriva de la siguiente manera.
+      Utilizamos los niveles de agua observados en cada estación para determinar la probabilidad de que se supere un cierto 
+      nivel de agua. Luego interpolamos estos niveles de agua para todos los ríos en la zona. Por lo tanto, sabíamos que tan 
+      alta puede ser el nivel del agua para inundaciones con diferentes períodos de retorno en todas las partes de la cuenca
+       Acre y Purus. Luego, delineamos el área de la llanura de inundación para cada período de retorno del modelo de elevación 
+       digital. Para la cuenca Madre de Dios, no hay datos disponibles. Por lo tanto, utilizamos ecuaciones derivadas de la cuenca 
+       Acre y Purus para predecir los niveles de inundaciones en Madre de Dios. Los resultados de estos análisis son áreas inundadas
+        con diferentes períodos de retorno en cada cuenca fluvial. Para el análisis de exposición, superpusimos las áreas inundadas 
+        con los datos de uso del suelo para los diferentes escenarios. La exposición a la inundaciones, por lo tanto, es una función 
+        de la probabilidad de peligro (es decir, los períodos de retorno de la inundación) y la exposición, es decir, dónde se encuentran 
+        los edificios, las carreteras y la agricultura.</p>
 
 
 
