About new people

--- a/about.html
+++ b/about.html
@@ -109,92 +109,131 @@
 	</div>
 
 
-
-	<div class="w3-row">
-	<div class="w3-col s2 w3-center">
-		<img src="static/photos/av.jpg" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
-		<h5>Adrian Vogl</h5>
-		<div class="center w3-text-grey"><i> Líder del proyecto, Científica, especialista en diag. hidrico</i></div>
-	</div>
-
-	<div class="w3-col s2 w3-center">
-		<img src="static/photos/mg.jpg" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
-		<h5>Marcelo Guevara</h5>
-		<div class="center w3-text-grey"><i>Coordinator Latin America</i></div>
-	</div>
-
-	<div class="w3-col s2 w3-center">
-		<img src="static/photos/cw.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
-		<h5>Charlotte Weil</h5>
-		<div class="center w3-text-grey"><i>Científica de datos, desarrolladora del visualizador</i></div>
-	</div>
-
-	<div class="w3-col s2 w3-center">
-		<img src="static/photos/rs.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
-		<h5>Rafaël Schmitt</h5>
-		<div class="center w3-text-grey"><i>Científico, especialista en inundaciones</i></div>
-	</div>
-
-	<div class="w3-col s2 w3-center">
-		<img src="static/photos/jd.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
-		<h5>Christopher Anderson</h5>
-		<div class="center w3-text-grey"><i>Científico, especialista en salud</i></div>
-	</div>
-
-	<div class="w3-col s2 w3-center">
-		<img src="static/photos/jd.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
-		<h5>Morgan Kain</h5>
-		<div class="center w3-text-grey"><i>Científico, especialista en salud</i></div>
-	</div>
-
-	<div style="clear: both; height: 1vh; "></div>
-
-	<div class="w3-col s2 w3-center">
-		<img src="static/photos/lm.jpg" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
-		<h5>Lisa Mandle</h5>
-		<div class="center w3-text-grey"><i>Científica, especialista en salud</i></div>
-	</div>
-
-	<div class="w3-col s2 w3-center">
-		<img src="static/photos/af.jpg" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
-		<h5>Anna Fredriksson Häägg</h5>
-		<div class="center w3-text-grey"><i>Desarrolladora del visualizador</i></div>
-	</div>
-
-	<div class="w3-col s2 w3-center">
-		<img src="static/photos/jd.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
-		<h5>Sydney Moss</h5>
-		<div class="center w3-text-grey"><i>Asistente de Investigación</i></div>
-	</div>
-
-	<div style="clear: both; height: 1vh; "></div>
-
-	<div class="w3-col s2 w3-center">
-		<img src="static/photos/lf.jpg" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
-		<h5>Luis Fernandez</h5>
-		<div class="center w3-text-grey"><i>Cincia</i></div>
-	</div>
-
-	<div class="w3-col s2 w3-center">
-		<img src="static/photos/mt.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
-		<h5>Marta Torres</h5>
-		<div class="center w3-text-grey"><i>Cincia</i></div>
-	</div>
-
-	<div class="w3-col s2 w3-center">
-		<img src="static/photos/jc.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
-		<h5>Jorge Caballero</h5>
-		<div class="center w3-text-grey"><i>Cincia, Analista SIG</i></div>
-	</div>
-
-	<div class="w3-col s2 w3-center">
-		<img src="static/photos/mp.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
-		<h5>Martin Pillaca</h5>
-		<div class="center w3-text-grey"><i>Cincia, Analista SIG</i></div>
-	</div>
+	<div class="w3-half">
+		<div class="w3-row">
+			<div class="w3-col s4 w3-center">
+				<img src="static/photos/av.jpg" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
+				<h5>Adrian Vogl</h5>
+				<div class="center w3-text-grey"><i> Líder del proyecto, Científica, especialista en diag. hidrico</i></div>
+			</div>
+		
+			<div class="w3-col s4 w3-center">
+				<img src="static/photos/mg.jpg" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
+				<h5>Marcelo Guevara</h5>
+				<div class="center w3-text-grey"><i>Coordinator Latin America</i></div>
+			</div>
+		
+			<div class="w3-col s4 w3-center">
+				<img src="static/photos/cw.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
+				<h5>Charlotte Weil</h5>
+				<div class="center w3-text-grey"><i>Científica de datos, desarrolladora del visualizador</i></div>
+			</div>
+			
+			
+		</div>
+		<div class="w3-row">
+			<div class="w3-col s4 w3-center">
+				<img src="static/photos/rs.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
+				<h5>Rafaël Schmitt</h5>
+				<div class="center w3-text-grey"><i>Científico, especialista en inundaciones</i></div>
+			</div>
+			<div class="w3-col s4 w3-center">
+				<img src="static/photos/jd.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
+				<h5>Christopher Anderson</h5>
+				<div class="center w3-text-grey"><i>Científico, especialista en salud</i></div>
+			</div>
+	
+			<div class="w3-col s4 w3-center">
+				<img src="static/photos/jd.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
+				<h5>Morgan Kain</h5>
+				<div class="center w3-text-grey"><i>Científico, especialista en salud</i></div>
+			</div>
+		
+		</div>
+		<div class="w3-row">
+			<div class="w3-col s4 w3-center">
+				<img src="static/photos/lm.jpg" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
+				<h5>Lisa Mandle</h5>
+				<div class="center w3-text-grey"><i>Científica, especialista en salud</i></div>
+			</div>
+	
+			<div class="w3-col s4 w3-center">
+				<img src="static/photos/af.jpg" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
+				<h5>Anna Fredriksson Häägg</h5>
+				<div class="center w3-text-grey"><i>Desarrolladora del visualizador</i></div>
+			</div>
+			<div class="w3-col s4 w3-center">
+				<img src="static/photos/jd.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
+				<h5>Sydney Moss</h5>
+				<div class="center w3-text-grey"><i>Asistente de Investigación</i></div>
+			</div>
+		</div>
 
 
 	</div>
+
+	<div class="w3-half">
+		<div class="w3-row">
+			<div class="w3-col s4 w3-center">
+				<img src="static/photos/lf.jpg" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
+				<h5>Luis Fernandez</h5>
+				<div class="center w3-text-grey"><i>Director Ejecutivo</i></div>
+			</div>
+			<div class="w3-col s4 w3-center">
+				<img src="static/photos/jd.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
+				<h5>Luis Fernandez</h5>
+				<div class="center w3-text-grey"><i>Director Nacional </i></div>
+			</div>
+			<div class="w3-col s4 w3-center">
+				<img src="static/photos/mt.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
+				<h5>Marta Torres</h5>
+				<div class="center w3-text-grey"><i>Coordinadora del Área de Comunicación y Difusión </i></div>
+			</div>
+	
+			
+		</div>
+		<div class="w3-row">
+			
+			<div class="w3-col s4 w3-center">
+				<img src="static/photos/jc.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
+				<h5>Jorge Caballero</h5>
+				<div class="center w3-text-grey"><i>Especialista SIG</i></div>
+			</div>
+			<div class="w3-col s4 w3-center">
+				<img src="static/photos/mp.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
+				<h5>Martin Pillaca</h5>
+				<div class="center w3-text-grey"><i>Especialista SIG</i></div>
+			</div>
+			
+		</div>
+		<center><p>Herencia</p></center>
+		<div class="w3-row">
+			<div class="w3-col s4 w3-center">
+				<img src="static/photos/jd.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
+				<h5>Juan Fernando Reyes</h5>
+				<div class="center w3-text-grey"><i>Director</i></div>
+			</div>
+			<div class="w3-col s4 w3-center">
+				<img src="static/photos/jd.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
+				<h5>Guillermo Rioja Ballivián</h5>
+				<div class="center w3-text-grey"><i>Antropólogo Social, investigador social</i></div>
+			</div>
+			<div class="w3-col s4 w3-center">
+				<img src="static/photos/jd.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
+				<h5>Martin de Oliveira</h5>
+				<div class="center w3-text-grey"><i>Especialista SIG</i></div>
+			</div>
+			
+		</div>
+
+		
+
+
+	</div>
+
+
+
+	
 
 </div>
 
