remove prototipo tag

--- a/pampa.html
+++ b/pampa.html
@@ -9,7 +9,7 @@
       <script src="js/gtag.js"></script>
 
 
-    <title>Prototipo de Visualizador PRO Agua: La Pampa</title>
+    <title>Visualizador PRO Agua: La Pampa</title>
     <!-- - - - - - - - -  -->
     <!-- Needed for Navbar-->
     <link rel="stylesheet" href="lib/css/tachyons.min.css" />
