--- a/MAP.html
+++ b/MAP.html
@@ -4,7 +4,7 @@
 
 <html>
 	<head>
-	<title>Prototipo de Visualizador PRO Agua</title>
+	<title>Visualizador PRO Agua</title>
 	
 	<!-- Needed for Navbar-->
     <link rel="stylesheet" href="lib/css/tachyons.min.css" />
@@ -28,7 +28,7 @@
 
 	<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 	   <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-	   <title>Prototipo de Visualizador PRO Agua</title>
+	   <title>Visualizador PRO Agua</title>
 	
 	  <!-- Leaflet & PlugIns (MiniMap) -->
 	  <link rel="stylesheet" href="lib/css/Control.MiniMap.css" />
