--- a/futuroPampa.html
+++ b/futuroPampa.html
@@ -9,7 +9,7 @@
       <script src="js/gtag.js"></script>
 
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
-    <title>Prototipo de Visualizador PRO Agua</title>
+    <title>Visualizador PRO Agua</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
