--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <script src="js/gtag.js"></script>
 
 
-    <title>Prototipo de Visualizador PRO Agua</title>
+    <title>Visualizador PRO Agua</title>
 
     <link rel="stylesheet" href="css/style.css"/>
   	
