--- a/template.html
+++ b/template.html
@@ -9,7 +9,7 @@
       <script async src="https://www.googletagmanager.com/gtag/js?id=UA-149667597-3"></script>
       <script src="js/gtag.js"></script>
 
-    <title>Prototipo de Visualizador PRO Agua</title>
+    <title>Visualizador PRO Agua</title>
   	
     <!-- Needed for Navbar-->
     <link rel="stylesheet" href="lib/css/tachyons.min.css" />
